# claude-memory-server

./: .env.example  .gitignore  README.md  UNKNOWNS.md  backfill_word_counts.py  batch_import.py  browse.py  claude_sync.py  deploy.sh  dream.py  graph.py  ingest.py  mcp_bridge.py  prompt_hook.py  pyproject.toml  repair_chroma.py  requirements-server.txt  restart-server.sh  server.py  start.sh  surprisal.py  test_batch_import.py  test_browse.py  test_claude_sync.py  test_dream.py  test_graph.py  test_ingest.py  test_memory_disabled.py  test_server.py  test_surprisal.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: Nav.tsx
frontend/src/components/dreams/: DreamOperationRow.tsx  DreamRunCard.tsx  DreamsTab.tsx
frontend/src/components/graph/: CytoscapeGraph.tsx  GraphTab.tsx  GraphToolbar.tsx  Sidebar.tsx
frontend/src/components/recalls/: RecallCard.tsx  RecallsTab.tsx  ReflectionBadge.tsx
frontend/src/components/stats/: ReflectionLineChart.tsx  ReflectionStackedChart.tsx  StatCard.tsx  StatsTab.tsx
frontend/src/hooks/: usePolling.ts
skills/memories/: SKILL.md
static/: app.js  index.html  style.css
